--- a/.github/workflows/cimultios.yml
+++ b/.github/workflows/cimultios.yml
@@ -24,6 +24,9 @@ jobs:
       - name: npm ci
         run: npm ci
 
+      - name: Install dependencies
+        run: npm install vite@latest
+
       - name: Run tests
         run: npm test --if-present
 
