--- a/.github/workflows/reactci.yml
+++ b/.github/workflows/reactci.yml
@@ -1,4 +1,5 @@
 name: React CI
+
 on:
   push:
     branches: [main]
@@ -10,10 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
-      - run: npm ci
-      - run: npm test --if-present
-      - run: npm run build --if-present
+          node-version: '18'
+
+      - name: npm ci
+        run: npm ci
+
+      - name: Install dependencies
+        run: npm install vite@latest
+
+      - name: Run tests
+        run: npm test --if-present
+
+      - name: Build project
+        run: npm run build --if-present
